# personal-intelligence-hub

./: .env.example  .gitignore  Personal Intelligence Hub — AI 기반 멀티도메인 인텔리전스 대시보드 2ebe729950038042b011f066bfdcadda.md  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/db/migrations/: 001_init.sql
backend/src/intel_hub/: __init__.py  api_server.py  config.py  logging.py  scheduler.py  worker.py
backend/src/intel_hub/api/: deps.py  main.py  schemas.py  websocket.py
backend/src/intel_hub/api/routes/: digest.py  domains.py  events.py  feed.py  kols.py  topics.py
backend/src/intel_hub/collectors/: arxiv.py  base.py  github.py  onchain.py  rss.py  twitter.py
backend/src/intel_hub/db/: models.py  repository.py  session.py
backend/src/intel_hub/db/seed/: __init__.py  __main__.py  ai_ml_seed.py  crypto_seed.py
backend/src/intel_hub/domains/: __init__.py  base.py  registry.py
backend/src/intel_hub/domains/ai_ml/: __init__.py  action_signals.py  config.py  kol_list.py  prompts.py
backend/src/intel_hub/pipeline/: __init__.py  action_signal.py  analyzer.py  cross_domain.py  daily_digest.py  llm.py  noise_filter.py  schemas.py  sentiment.py
backend/src/intel_hub/services/: __init__.py  alert_dispatcher.py  broadcaster.py  collector_service.py  processing_service.py  redis_streams.py  retry.py
backend/src/intel_hub/telegram/: bot.py
backend/tests/: test_analyzer.py  test_collectors.py  test_cross_domain.py  test_domain_registry.py  test_noise_filter.py
(+35 files in other folders)
